# ProcessSimulation

./: .gitignore  CMakeLists.txt  README.md  config.cfg  main.cpp
Config/: Config.cpp  Config.h
FCFS/: FCFS.md  FCFSManager.cpp  FCFSManager.h
ProcessGenerator/: ProcessStruct.h
SJF/: SJF.md  SJFManager.cpp  SJFManager.h
Utils/: FileWriter.h  ProcessCreator.h  ProgressBar.h
src/: src.h
src/Config/: Config.cpp  Config.h
src/FCFS/: FCFSManager.cpp  FCFSManager.h
src/FIFO/: FIFOManager.cpp  FIFOManager.h
src/LRU/: LRUManager.cpp  LRUManager.h
src/ProcessGenerator/: PageStruct.h  ProcessStruct.h
src/SJF/: SJFManager.cpp
src/Utils/: FileWriter.h  ProcessCreator.h  ProgressBar.h  RandomStringGenerator.cpp  RandomStringGenerator.h
